# hiprtc-driver

./: CMakeLists.txt  LICENSE  README.md  main.cpp
